--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -4,8 +4,7 @@
     "target": "ES5",
     "module": "CommonJS",
     "outDir": "./dist/cjs",
-    "declaration": true,
-    "declarationDir": "./dist/types"
+    "declaration": true
   },
   "exclude": [
     "test/**/*.spec.ts",
