--- a/tsconfig.mjs.json
+++ b/tsconfig.mjs.json
@@ -2,8 +2,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "ES6",
+    "target": "ES6",
     "outDir": "./dist/mjs",
-    "declaration": false
+    "declaration": true,
   },
   "exclude": [
     "test/**/*.spec.ts",
