--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "typescript-npm-package-template",
   "version": "0.0.0-development",
-  "description": "A template for creating npm packages using TypeScript and VSCode",  
+  "description": "A template for creating npm packages using TypeScript and VSCode",
   "main": "./dist/cjs/index.js",
   "types": "./dist/cjs/index.d.ts",
-  "exports": {   
+  "exports": {
     ".": {
       "import": {
         "types": "./dist/mjs/index.d.ts",
@@ -13,7 +13,7 @@
       "require": {
         "types": "./dist/cjs/index.d.ts",
         "default": "./dist/cjs/index.js"
-      }      
+      }
     },
     "./*": {
       "import": {
@@ -23,7 +23,7 @@
       "require": {
         "types": "./dist/cjs/*.d.ts",
         "default": "./dist/cjs/*.js"
-      }      
+      }
     },
     "./package.json": "./package.json"
   },
@@ -38,20 +38,20 @@
     "cm": "cz",
     "lint": "eslint ./src/ --fix",
     "prepare": "husky install",
-    "semantic-release": "semantic-release",
+    "release": "npx changeset publish",
     "test:watch": "jest --watch",
     "test": "jest --coverage",
     "typecheck": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ryansonshine/typescript-npm-package-template.git"
+    "url": "git+https://github.com/hsuehic/typescript-npm-package-template.git"
   },
   "license": "MIT",
   "author": {
-    "name": "Ryan Sonshine",
-    "email": "ryansonshine@users.noreply.github.com",
-    "url": "https://github.com/ryansonshine"
+    "name": "Richard",
+    "email": "hsuehic@gmail.com",
+    "url": "https://github.com/hsuehic"
   },
   "engines": {
     "node": ">=12.0"
@@ -68,10 +68,13 @@
     "codecov"
   ],
   "bugs": {
-    "url": "https://github.com/ryansonshine/typescript-npm-package-template/issues"
+    "url": "https://github.com/hsuehic/typescript-npm-package-template/issues"
   },
-  "homepage": "https://github.com/ryansonshine/typescript-npm-package-template#readme",
+  "homepage": "https://github.com/hsuehic/typescript-npm-package-template#readme",
   "devDependencies": {
+    "@changesets/cli": "^2.26.2",
+    "@commitlint/cli": "^17.6.6",
+    "@commitlint/config-conventional": "^17.6.6",
     "@ryansonshine/commitizen": "^4.2.8",
     "@ryansonshine/cz-conventional-changelog": "^3.3.4",
     "@types/jest": "^27.5.2",
@@ -87,15 +90,9 @@
     "jest": "^27.2.0",
     "lint-staged": "^13.2.1",
     "prettier": "^2.2.1",
-    "semantic-release": "^21.0.1",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.2.4"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/@ryansonshine/cz-conventional-changelog"
-    }
   },
   "lint-staged": {
     "*.ts": "eslint --cache --cache-location .eslintcache --fix"
