--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "clean": "rm -rf ./lib/ && rm -rf ./dist/",
     "cm": "cz",
     "lint": "eslint ./src/ --fix",
+    "lintpackagejson": "npmPkgJsonLint .",
     "prepare": "husky install",
     "release": "npx changeset publish",
     "test:watch": "jest --watch",
@@ -89,57 +90,15 @@
     "husky": "^6.0.0",
     "jest": "^27.2.0",
     "lint-staged": "^13.2.1",
+    "npm-package-json-lint": "^7.0.0",
+    "npm-package-json-lint-config-default": "^6.0.0",
     "prettier": "^2.2.1",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.2.4"
   },
   "lint-staged": {
-    "*.ts": "eslint --cache --cache-location .eslintcache --fix"
-  },
-  "release": {
-    "branches": [
-      "main"
-    ],
-    "plugins": [
-      [
-        "@semantic-release/commit-analyzer",
-        {
-          "preset": "conventionalcommits",
-          "releaseRules": [
-            {
-              "type": "build",
-              "scope": "deps",
-              "release": "patch"
-            }
-          ]
-        }
-      ],
-      [
-        "@semantic-release/release-notes-generator",
-        {
-          "preset": "conventionalcommits",
-          "presetConfig": {
-            "types": [
-              {
-                "type": "feat",
-                "section": "Features"
-              },
-              {
-                "type": "fix",
-                "section": "Bug Fixes"
-              },
-              {
-                "type": "build",
-                "section": "Dependencies and Other Build Updates",
-                "hidden": false
-              }
-            ]
-          }
-        }
-      ],
-      "@semantic-release/npm",
-      "@semantic-release/github"
-    ]
+    "*.ts": "eslint --cache --cache-location .eslintcache --fix",
+    "package.json": "npmPkgJsonLint"
   }
 }
