--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,9 +16,53 @@ permissions:
   statuses: write
 
 jobs:
+  eslint: 
+    name: ESLint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+      
+      - name: Setup Node.js 16
+        uses: actions/setup-node@v3
+        with: 
+          node-version: 16
+      
+      - name: Install pnpm
+        run: npm i -g pnpm
+      
+      - name: Install Dependencies
+        run: pnpm install
+      
+      - name: ESLint
+        run: pnpm run eslint
+  
+  typecheck: 
+    name: Typecheck
+    runs-on: ubuntu-latest
+    needs: [eslint]
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+      
+      - name: Setup Node.js 16
+        uses: actions/setup-node@v3
+        with: 
+          node-version: 16
+      
+      - name: Install pnpm
+        run: npm i -g pnpm
+      
+      - name: Install Dependencies
+        run: pnpm install
+      
+      - name: Typecheck
+        run: pnpm run typecheck
+    
   release:
     name: Release
     runs-on: ubuntu-latest
+    needs: [typecheck]
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
@@ -27,6 +71,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
+
+      - name: Install pnpm 
+        run: npm -g i pnpm
 
       - name: Install Dependencies
         run: pnpm install
