--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "build:mjs": "tsc --project tsconfig.mjs.json",
     "clean": "rm -rf ./lib/ && rm -rf ./dist/",
     "cm": "cz",
-    "lint": "eslint ./src/ --fix",
+    "eslint": "eslint ./src/ --fix",
     "lintpackagejson": "npmPkgJsonLint .",
     "prepare": "husky install",
     "release": "npx changeset publish",
