--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,7 +9,8 @@
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
     "burkeholland.simple-react-snippets",
-    "clinyong.vscode-css-modules"
+    "clinyong.vscode-css-modules",
+    "stylelint.vscode-stylelint"
 		
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
