--- a/package.json
+++ b/package.json
@@ -94,10 +94,11 @@
     "prettier": "^2.2.1",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
-    "typescript": "^4.2.4"
+    "typescript": "^5.0.1"
   },
   "lint-staged": {
     "*.ts": "eslint --cache --cache-location .eslintcache --fix",
     "package.json": "npmPkgJsonLint"
-  }
+  },
+  "packageManager": "pnpm@8.6.7"
 }
