--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "typescript-npm-package-template",
+  "name": "cnp-template-typescript",
   "version": "0.0.0-development",
-  "description": "A template for creating npm packages using TypeScript and VSCode",
+  "description": "A typescript based template for creating npm packages using TypeScript and VSCode",
   "main": "./dist/cjs/index.js",
   "types": "./dist/cjs/index.d.ts",
   "exports": {
@@ -45,7 +45,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hsuehic/typescript-npm-package-template.git"
+    "url": "git+https://github.com/hsuehic/cnp-template-typescript.git"
   },
   "license": "MIT",
   "author": {
@@ -68,9 +68,9 @@
     "codecov"
   ],
   "bugs": {
-    "url": "https://github.com/hsuehic/typescript-npm-package-template/issues"
+    "url": "https://github.com/hsuehic/cnp-template-typescript/issues"
   },
-  "homepage": "https://github.com/hsuehic/typescript-npm-package-template#readme",
+  "homepage": "https://github.com/hsuehic/cnp-template-typescript#readme",
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
     "@commitlint/cli": "^17.6.6",
@@ -83,9 +83,7 @@
     "@typescript-eslint/parser": "^4.22.0",
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "eslint": "^7.25.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-config-cnp": "^0.0.3",
     "husky": "^6.0.0",
     "jest": "^27.2.0",
     "lint-staged": "^13.2.1",
