--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "build": "npm run build:cjs && npm run build:mjs",
     "build:cjs": "tsc --project tsconfig.cjs.json",
     "build:mjs": "tsc --project tsconfig.mjs.json",
+    "postbuild:cjs": "echo '{\"type\":\"commonjs\"}' > ./dist/cjs/package.json",
+    "postbuild:mjs": "echo '{\"type\":\"module\"}' > ./dist/mjs/package.json",
     "clean": "rm -rf ./lib/ && rm -rf ./dist/",
     "eslint": "eslint ./src/ --fix",
     "lintpackagejson": "npmPkgJsonLint .",
@@ -81,7 +83,7 @@
     "@types/node": "^12.20.11",
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "eslint": "^8.45.0",
-    "eslint-config-cnp": "^1.0.0",
+    "eslint-config-cnp": "^1.0.3",
     "husky": "^6.0.0",
     "jest": "^27.2.0",
     "lint-staged": "^13.2.1",
