--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "./package.json": "./package.json"
   },
   "files": [
-    "dist/**/*"
+    "dist"
   ],
   "scripts": {
+    "add-package": "ts-node-esm ./scripts/add-package.mts",
     "build": "npm run build:cjs && npm run build:mjs",
     "build:cjs": "tsc --project tsconfig.cjs.json",
     "build:mjs": "tsc --project tsconfig.mjs.json",
     "clean": "rm -rf ./lib/ && rm -rf ./dist/",
+    "postbuild:cjs": "echo '{\"type\":\"commonjs\"}' > ./dist/cjs/package.json",
+    "postbuild:mjs": "echo '{\"type\":\"module\"}' > ./dist/mjs/package.json",
     "eslint": "eslint ./src/ --fix",
     "lintpackagejson": "npmPkgJsonLint .",
     "prepare": "husky install",
@@ -86,15 +89,17 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "husky": "^6.0.0",
+    "husky": "^8.0.0",
     "jest": "^27.2.0",
     "lint-staged": "^13.2.1",
     "npm-package-json-lint": "^7.0.0",
     "npm-package-json-lint-config-default": "^6.0.0",
     "prettier": "^2.2.1",
+    "prompts": "^2.4.2",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "zx": "^7.2.3"
   },
   "lint-staged": {
     "*.ts": "eslint --cache --cache-location .eslintcache --fix",
