--- a/package.json
+++ b/package.json
@@ -77,8 +77,6 @@
     "@changesets/cli": "^2.26.2",
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
-    "@ryansonshine/commitizen": "^4.2.8",
-    "@ryansonshine/cz-conventional-changelog": "^3.3.4",
     "@types/jest": "^27.5.2",
     "@types/node": "^12.20.11",
     "conventional-changelog-conventionalcommits": "^5.0.0",
@@ -87,17 +85,14 @@
     "husky": "^6.0.0",
     "jest": "^27.2.0",
     "lint-staged": "^13.2.1",
+    "markdownlint-cli2": "^0.8.1",
+    "markdownlint-rule-search-replace": "^1.1.0",
     "npm-package-json-lint": "^7.0.0",
     "npm-package-json-lint-config-default": "^6.0.0",
     "prettier": "^2.8.8",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^5.0.1"
-  },
-  "lint-staged": {
-    ".md": "prettier -w",
-    "*.ts": "eslint --cache --cache-location .eslintcache --fix",
-    "package.json": "npmPkgJsonLint"
   },
   "packageManager": "pnpm@8.6.7"
 }
