--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -7,6 +7,7 @@
     "default": true,
     // Disabled, as some callouts include headings.
     "header-increment": false,
+    "no-emphasis-as-heading": false,
     "ul-style": {
       "style": "dash"
     },
